--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html LANG="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat | login</title>
 </head>
 <body>
@@ -10,7 +11,7 @@
         <sub>you are registered if your information not exist</sub>
     </nav>
     <main>
-        <form action="validation.php" method="post">
+        <form action="app/controllers/authController.php" method="post">
             <hr>
             <label for="username">username:</label>
             <input type="text" id="username" name="username" required>
